added clubs and diamonds to the deck